# python-project-template

./: .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_internal.md  README_public.md  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report_1.yml  config.yaml  config.yml  design_rfc.md  design_rfc.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bugfix.md
.github/repo-policy/: branch-protection.json  codeql-default-setup.json  repo-security.json
.github/workflows/: ci.yml  release.yaml  test-release.yaml
docs/: index.md
docs/adr/: 0001-record-architecture-decisions.md  README.md  template.md
docs/architecture/adr/: index.md  template.md
docs/guides/: getting_started.md
docs/reference/: api.md  index.md  my-package.md  my_package.md
docs/rfc/: README.md  index.md  template.md
scripts/: generate_adr_index.py  generate_index.py  repo_policy.sh
src/my-package/: __init__.py  hello.py
src/my_package/: __init__.py  hello.py
